# VANYA_TG_BOT

./: .dockerignore  .env.docker.example  .env.example  .env.railway.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  Dockerfile  LINT_FIXES.md  Makefile  PLANNING.md  README.md  TASK.md  backup.sh  deploy.railway.sh  deploy.sh  healthcheck.py  pyproject.toml  pyrightconfig.json  requirements.railway.txt  requirements.txt  ruff.toml  run.py  vanya-tg-bot.service.example
.cursor/rules/: clean-code.mdc  clean.mdc  database.mdc  python.mdc  python1.mdc  rulesproject.mdc
docker/: Dockerfile.local  Dockerfile.poetry  README.md  docker-compose.prod.yml  docker-compose.yml
examples/: meal_examples_test.py  meal_plan_example.py
rules/: database.mdc
src/: README.md  __init__.py  main.py
src/ai/: __init__.py  meal_planner.py  openai_service.py
src/bot/db/: __init__.py  connection.py
src/bot/handlers/: __init__.py  user_dialog.py
src/bot/keyboards/: __init__.py  inline_kb.py  reply_kb.py
src/bot/middlewares/: __init__.py  channel_subscription.py  repository.py
src/bot/models/: __init__.py  state.py
src/bot/repository/: __init__.py  user_repository.py
src/bot/services/: __init__.py  calculation.py  openai_service.py  subscription.py
src/bot/utils/: __init__.py  formatters.py  router.py  validators.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  config.py  logger.py
src/core/models/: README.md  __init__.py  user.py  user_test.py
src/core/services/: __init__.py  calculator.py  database.py  database_railway.py  user_repository.py
src/core/utils/: __init__.py  encryption.py  sqlcipher_dialect.py
src/logging/: __init__.py  logger.py
src/tools/: __init__.py  demo_user_encryption.py  initialize_db.py  test_database.py  verify_db_encryption.py  verify_field_encryption.py
tests/: conftest.py  test_meal_planner.py
tests/bot/services/: test_openai_service.py
tests/core/: test_logger.py  test_user_model.py
