[tool.poetry]
name = "vanyba-telegramm"
version = "0.1.0"
description = "Телеграм-бот для расчета КБЖУ"
authors = ["MaximPenkin <penkin.jr@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.3.0"
openai = "^1.12.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
sqlmodel = "^0.0.14"
pydantic = "^2.6.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=src"
