[tool.poetry]
name = "vanyba-telegramm"
version = "0.1.0"
description = "Телеграм-бот для расчета КБЖУ"
authors = ["MaximPenkin <penkin.jr@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.3.0"
openai = "^1.12.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
sqlmodel = "^0.0.14"
pydantic = "^2.6.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.13"
pyright = "^1.1.400"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = ["py310"]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "ERA",  # eradicate
    "PL",   # pylint
    "RUF",  # ruff-specific rules
]
ignore = []

[tool.ruff.per-file-ignores]
# Allow for `assert` statements and magic methods in tests
"tests/*" = ["S101", "PLR2004", "PLR0913"]

[tool.ruff.isort]
known-first-party = ["vanyba_telegramm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=src"
